Excluded out directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .idea/
+.out/
+/out/production/ALG2/META-INF/ALG2.kotlin_module
+/out/production/ALG2/cz/osu/structure/ArrayList.class
+/out/production/ALG2/cz/osu/structure/LinkedList.class
+/out/production/ALG2/cz/osu/structure/LinkedListNode.class
+/out/production/ALG2/cz/osu/Main.class
