Added information to Main.java

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /out/production/ALG2/cz/osu/structure/LinkedList.class
 /out/production/ALG2/cz/osu/structure/LinkedListNode.class
 /out/production/ALG2/cz/osu/Main.class
+/out/production/ALG2/cz/osu/sorting/BubbleSort.class
+/out/production/ALG2/cz/osu/sorting/InsertionSort.class
+/out/production/ALG2/cz/osu/sorting/QuickSort.class
+/out/production/ALG2/cz/osu/sorting/SelectionSort.class
