Added FactorialNumber algorithm.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /out/production/ALG2/cz/osu/structure/LinkedList.class
 /out/production/ALG2/cz/osu/structure/LinkedListNode.class
 /out/production/ALG2/cz/osu/Main.class
+/out/production/ALG2/cz/osu/algorithms/FibonacciSequence.class
