Added 'Maven' repository.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /out/production/ALG2/cz/osu/structure/LinkedListNode.class
 /out/production/ALG2/cz/osu/Main.class
 /out/production/ALG2/cz/osu/algorithms/FibonacciSequence.class
+target/
