Added to ignore all .idea files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea
+.idea/compiler.xml
 .out/
 /out/production/ALG2/META-INF/ALG2.kotlin_module
 /out/production/ALG2/cz/osu/structure/ArrayList.class
