--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea/compiler.xml
+.idea/*
 .out/
 /out/production/ALG2/META-INF/ALG2.kotlin_module
 /out/production/ALG2/cz/osu/structure/ArrayList.class
