--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>cz.osu</groupId>
     <artifactId>ALG2-17-02-20</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
