Added new branch.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cz.osu</groupId>
-    <artifactId>ALG2</artifactId>
+    <artifactId>ALG2_02_03_20</artifactId>
     <version>1.0</version>
 
     <properties>
